[update] change to bearer auth
